# cofebem-python

./: .gitignore  AGENTS.md  CMakeLists.txt  Interpolation_idea.md  LICENSE  README.md  README_fenics.md  ScSPD.md  Sc_BEM.npz  Sc_FEM.npz  TODO.md  coarse_sphere.vtk  coarse_sphere2.msh  cofebem_broken_env.txt  cube.h5  cube.xdmf  cube_bcs.h5  cube_bcs.xdmf  cube_bem_new.vtu  cube_boundary.vtk  cube_boundary_mixedBC.vtk  cube_boundary_mixedBC.vtu  cube_fenics.h5  cube_fenics.xdmf  cube_fenics_new.h5  cube_fenics_new.xdmf  cube_new.geo  cube_tetra.geo  cube_tetra.msh  cube_tetra_meshio.msh  deformed_solution.h5  deformed_solution.xdmf  displacement_0.h5  displacement_0.xdmf  displacement_1.h5  displacement_1.xdmf  displacement_10.h5  displacement_10.xdmf  displacement_11.h5  displacement_11.xdmf  (+146 more)
cofebem/: Lanczos.md  README.md  Sc_approx.py  Sc_approx_2d.py  Sc_approx_new.py  Sc_approx_shift.py  Sc_hertz.py  Sc_multiple_solves.py  Sc_multiple_solves2.py  Sc_parallel.py  Sc_parallel2.py  Sc_semianalytic.py  Sc_semianalytic_boussinesq.py  Sc_semianalytic_source.py  __init__.py  bilateral_contact.py  bilateral_contact2.py  ccg_comparison.py  lanczos_approx.py  mat_free_contact.py  max_prob.py  max_tyre.py  model.py  neo_hookean.py  normals_hemisphere.py  penalty_fenics.py  pikachu_cluster.py  pipeline_fenicsx_minimal.py  pipeline_fenicsx_minimal_v2.py  speech.txt  test_pipeline_fenicsx.py  test_pipeline_fenicsx_vy.py  test_pipeline_normals.py
cofebem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cofebem/bem/: bem_cube.py  bem_validaton.py  construct_H.py  construct_S.py  contact_gmsh.py  cube_bem.py  cube_bem2.py  cube_bem_near_sing.py  cube_fenics.py  duffy_map.py  element.py  fundamental_solutions.py  garbage.py  guiggiani_method.py  hertzP1P0.py  implement.md  integrate.py  kernels.py  lemke_vs_ccg.py  low_vs_full_rank.py  matrix_extraction.py  p0p1test.py  quadrature.py  s_c.py  s_c_hmatrix.py  s_c_on_the_fly.py  s_c_symmetry.py  shape_functions.py  sphere_bem.py  sphere_fenics.py  telles_quad.py  test.py  test_bem.py  todebug.py  tractionP0.py  try.py  wtyre_contact.py
cofebem/bodies/: body.py  cone_indenter.py  cylinder_indenter.py  floor_motion.py  geometry.py  material.py  plane_indenter.py  regular_floor.py  sphere_indenter.py
cofebem/contact/: Sc.py  Sc_normal.py  contact.py  contact_solver.py  rigid_indenters.py
cofebem/discrete/: rigid.py
cofebem/fem/: __init__.py  bcs.py  bilinear_form.py  fem.py  finite_element.py  form.py  forms.py  function.py  function_space.py  linear_form.py  material.py  rigid.py  test.py  trial.py
cofebem/fenics/: _petsc_schur.c  contact.py  contact_normal.py  contact_postprocess.py  dihedral_compliance.py  linear_problem.py  petsc_schur.py  tyre_contact_input.py
cofebem/hmatrices/: __init__.py  block_cluster_tree.py  cluster.py  cluster_tree.py  entry_source.py  hmatrix.py  low_rank_approx.py  test_hm.py
cofebem/lcp/: __init__.py  exceptions.py  preconditioners.py  problem.py  result.py  solve.py
cpp/: CMakeLists.txt
cpp/include/flexcontact/: constrained_cg.hpp
cpp/src/: constrained_cg.cpp
cpp/tests/: test_constrained_cg.cpp
cylinder_levels/: level_0.h5  level_0.xdmf  level_1.h5  level_1.xdmf  level_2.h5  level_2.xdmf  level_3.h5  level_3.xdmf  level_4.h5  level_4.xdmf  level_5.h5  level_5.xdmf  level_6.h5  level_6.xdmf
data/: dragon_model.dae
doc/: Notes.md
docs/: architecture.md  fenicsx_workflow.md  flexibility_matrix_free.md  floor_motion.md  graded_tyre_mesh.md  hmatrix_symmetry.md  linear_solver_backends.md  naming_conventions.md  potential_contact_zone.md  ppcg.md  project_structure.md  rough_floor_contact.md  tyre_contact_input.md  tyre_step_projection.md  tyre_strategy_benchmark.md
examples/: README.md  axisymmetric.py  benchmark_Sc_methods.py  benchmark_tyre_contact_step_projection.py  benchmark_tyre_contact_strategies.py  compare_tyre_compliance_strategies.py  cone_indentation.py  cube.py  cylindrical_flatpunch.py  generate_tyre_dihedral_mesh.py  hemisphere.py  hertz_validation.py  hertz_validation2.py  hmat_benchmark.py  hmat_complexity.py  hmat_complexity2.py  input.json  ironing_test.py  lcp_benchmark.py  lcp_benchmark2.py  local_dihedral.json  mat_free_contact.py  matfree_vs_flex.py  max_prob.py  mfem_cofebem.py  penalty_vs_flexibility.py  plot_benchmark_Sc_methods.py  rebuild_potential_hmatrix.py  rough_axisymmetric.py  schur_vs_sampling.py  sm_input.json  tyre_contact.py  tyre_dihedral_contact.py  tyre_floor_motion.json  tyre_rough_motion.json  validation_cone.py  validation_punch.py
geo_files/: cone_tetra.geo  cube2bem.geo  cube_hex.geo  cube_refined_edges.geo  cube_tetra.geo  cylinder.geo  from_stl.geo  geometry_v2.geo  ground.geo  hemisphere.geo  new_hemisphere.geo  sphere.geo
out_elasticity/: BEM_Data.npz  FlexData.npz  facet_tags.h5  facet_tags.xdmf
python/: CMakeLists.txt  README.md  pyproject.toml
python/flexcontact/: __init__.py  _core.cpp  check_p0_matrix.py  fembem_contact_solver.py  fembem_contact_solver_pressure_p0.py  fembem_matrix_pressure_p0_extraction.py  fembem_matrix_pressure_p0_extraction_batch.py  matrix_checker.py  py_solvers.py  solvers.py
python/tests/: test_constrained_cg.py
src/: ClusterTree.py  check_p0_matrix.py  fembem_contact_solver.py  fembem_contact_solver_cone.py  fembem_matrix_approximation.py  fembem_matrix_extraction.py  fembem_matrix_pressure_p0_extraction_batch.py  fembem_most_matrix_extraction.py
test/: README.md
tools/: ClusterTree.py  aca.py  fembem_matrix_approximation.py
(+675 files in other folders)
